--- a/src/assets/scss/custom/structure/_vertical.scss
+++ b/src/assets/scss/custom/structure/_vertical.scss
@@ -46,7 +46,7 @@
 .main-content {
   margin-left: $sidebar-width;
   overflow: hidden;
-  background-color: $black;
+  background-color: $gray-300;
   .content {
     padding: 0 15px 10px 15px;
     margin-top: $header-height;
