--- a/src/Pages/connector/antd-table.scss
+++ b/src/Pages/connector/antd-table.scss
@@ -21,3 +21,24 @@
 .dark-table-container .ant-table-tbody>tr.ant-table-row-selected>td {
     background-color: #6c6969;
 }
+
+.ant-modal .ant-modal-content {
+    background-color: #21283e;
+}
+
+.ant-modal .ant-modal-header {
+    background: #21283e;
+}
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector  {
+    background-color: #21283e;
+    color: white;
+}
+
+.ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+    color: #6c6969;
+}
+
+.ant-modal .ant-modal-title {
+    color: white
+}
