--- a/src/assets/scss/custom/components/_reboot.scss
+++ b/src/assets/scss/custom/components/_reboot.scss
@@ -5,6 +5,10 @@
 html {
     position: relative;
     min-height: 100%;
+    font-size: 1.1rem;
+    font-family: "Open Sans",sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .h1,
