--- a/src/assets/scss/custom/structure/_vertical.scss
+++ b/src/assets/scss/custom/structure/_vertical.scss
@@ -2,8 +2,14 @@
 // _menu.scss
 //
 
+.body{
+  font-size: 1rem !important;
+  font-weight: 800;
+}
+
 .metismenu {
   margin: 0;
+  padding-right: 25px;
 
   li {
     display: block;
@@ -63,6 +69,29 @@
       }
     }
   }
+
+  li.mm-active{
+   > a.sidebarHighlight {
+    color: #EB1616 !important;
+    background: #000000 !important;
+    border-radius: 0 30px 30px 0;
+    border-left: 3px solid #EB1616;
+
+    i.sidebarHighlight{
+      color: #EB1616 !important;
+    }
+    }
+  }
+
+  li.mm-active{
+    > a.sub-menu-higlight {
+     color: #8590a5 !important;
+     background: #000000 !important;
+     border-radius: 0 30px 30px 0;
+     }
+   }
+  
+
 
   .has-arrow {
     &:after {
@@ -134,6 +163,25 @@
       }
     }
   }
+}
+
+#sidebar-menu .sidebarHighlight:hover{
+  color: #EB1616 !important;
+  background: #000000;
+  border-radius: 0 30px 30px 0;
+  border-left: 3px solid #EB1616;
+}
+
+#sidebar-menu .sidebarHighlight:hover > i{
+  color: #EB1616 !important;
+
+  
+}
+
+.sub-menu-higlight:hover{
+  color: #8590a5 !important;
+  background: #000000;
+  border-radius: 0 30px 30px 0;
 }
 
 .menu-title {
@@ -568,4 +616,12 @@ body[data-sidebar-size="small"] {
       left: $sidebar-collapsed-width;
     }
   }
+}
+
+.paddingLeft{
+  padding-left: 25px !important;
+}
+
+.color{
+  color: #8590a5 !important;
 }
