--- a/src/assets/scss/custom/plugins/_datatable.scss
+++ b/src/assets/scss/custom/plugins/_datatable.scss
@@ -275,6 +275,8 @@ div.table-responsive > table.table > thead > tr
   
 }
 
+// MaterialReactTable header and footer css 
+
 .css-1omuo8w-MuiToolbar-root, .css-g2tram-MuiToolbar-root{
   background-color: #191C24 !important;
 }
